--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ config/initializers/wicked_pdf.rb
 config/initializers/wicked_pdf.rb
 
 config/initializers/wicked_pdf.rb
+
+vendor/assets/.DS_Store
